--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,33 @@
+
+/* generali */
+.margin_right20{
+  margin-right: 20px;
+}
+
+.margin_right10{
+  margin-right: 10px;
+}
+
+/* colori */
+.colorebianco{
+  color: #fff;
+}
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-/* main */
-main{
-  display: flex;
+
+.clearfix::after{
+  content: '';
+  display: table;
+  clear: both;
 }
+
+.float-lt{
+  float: left;
+}
+
 /* navbar laterale */
 
 .nav_laterale{
@@ -14,29 +35,30 @@ main{
   height: calc(100vh - 90px);
   background-color: black;
 }
-
+/* /navbar laterale */
 
 /* contenitore del main */
 
 .content{
-  width: calc(100vw - 230px);
+  width: calc(100% - 230px);
   height: calc(100vh - 90px);
   background-color: red;
   overflow-y: auto;
 }
-/* elemento fixed del content */
+
+/* TOP MAIN FIXATO */
+
 .upgrade{
   position: fixed;
   width: calc(100% - 230px);
   height: 90px;
   display: flex;
-  flex-direction: row-reverse;
+  justify-content: flex-end;
   background-color: rgba(0,0,0,0.5);
-  
 }
 
-.upgrade_button{
-  margin-right: 5px;
+.upgrade button{
+  margin-right: 20px;
   height: 50%;
   background: none;
   color: #FFF;
@@ -44,48 +66,139 @@ main{
   border-radius: 50px;
   border-color: #fff;
   margin-top: 22px;
-  text-transform: uppercase;
-  z-index: 999;
+  cursor: pointer;
 }
-/* nav all'interno del contenitore */
+/* /TOP MAIN FIXATO */
+
+/* SELEZIONE */
 .content_nav{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: coral;
+  padding: 10px;
   margin-top: 90px;
 }
 
+.content .content_nav ul{
+  list-style: none;
+  display: flex;
+}
+.content .content_nav ul li{
+  padding: 10px;
+  position: relative;
+}
+.content .content_nav ul li a{
+  text-decoration: none;
+  color: #7d7f84;
+}
 
+.barra_green{
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 15px);
+  width: 30px;
+  height: 2px;
+  background-color: #adff2f;
+  display: none;
+}
+
+.content_nav ul li:active .barra_green{
+  display: block;
+}
+/* /SELEZIONE */
 
 
 /* footer */
-footer{
-    display: flex;
-    justify-content: space-between;
-    height: 90px;
-    background-color: #282828;
+footer {
+  display: flex;
+  justify-content: space-between;
+  height: 90px;
+  background-color: #282828;
 }
-
 .footer-left, .footer-right, .footer-center{
   display: flex;
   flex-shrink: 0;
-}
-
-footer .footer-left .icon {
+}.footer-left, .footer-right, .footer-center{
   display: flex;
-  flex-direction: column;
+  flex-shrink: 0;
+}
+footer .icon {
+  display: flex;
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   color: #878787;
   height: 100%;
-  padding: 10px;
+  padding: 14px 0;
   cursor: pointer;
+  /* margin: 0 15px; */
 }
-
+footer .footer-left .titolo-brano{
+  display: flex;
+  align-items: center;
+  color: #FFF;
+}
 .icon img {
-  width: 100%;
-  height: 100%;
+  width: 75%;
+ /* height: 100%;  */
   object-fit: cover;
 }
-
 .min_album{
-  width: 25px;
-  height: 25px;
+  width: 61px;
+  margin: 0 5px;
 }
+
+
+
+
+
+.container {
+  position:relative;
+  margin: 100px auto;
+  width: 150px;
+  text-align: center;
+}
+
+.progress2 {
+  padding: 3px;
+  border-radius: 30px;
+  background: rgba(0, 0, 0, 0.25);  
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
+}
+.progress-bar2 {
+  height: 6px;
+  border-radius: 30px;
+  background-image: 
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+  transition: 0.4s linear;  
+  transition-property: width, background-color;    
+}
+
+.progress-moved .progress-bar2 {
+  width: 85%; 
+  background-color: #fff;  
+  animation: progressAnimation 6s infinite;
+  
+}
+
+@keyframes progressAnimation {
+  0%   { width: 5%; background-color: #fff;}
+  100% { width: 85%; background-color: #fff; }
+}
+
+.circle{
+  color: #FFF;
+  position: absolute;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  left: 0;
+  top: 3px;
+  animation: CircleAnimation 6s infinite;
+}
+
+@keyframes CircleAnimation{
+  0% {left: 0;}
+  100% {left: 85%;}
+  }
